<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Interval Trainer</string>
    <string name="start">Start</string>
    <string name="reStart">Re-start</string>
    <string name="stop">Stop</string>
    <string name="reinitialize">Reinitialize</string>
    <string name="exit">Exit</string>
    <string name="run">Run</string>
    <string name="walk">Walk</string>
    <string name="warmup">Warm-up</string>
    <string name="total">Total</string>
    <string name="week">Week</string>
    <string name="countDown">count down</string>
    <string name="display">Display:</string>
    <string name="fractions">fractions</string>
    <string name="finished">Finished</string>
    <string name="msgNoInterval">No interval</string>
    <string name="beginnerPlan">Begginer plan</string>
    <string name="testPlan">Test plan</string>
    <string name="export">Export</string>
    <string name="select_session">Select session</string>
    <string name="default_session_label">None</string>
    <string name="plan">Plan : </string>
    <string name="session">Session : </string>
</resources>
