<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf9ff">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00:00&apos;00&apos;&apos;00"
            android:id="@+id/count"
            android:gravity="center"
            android:textSize="45sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="10sp"
            android:layout_height="wrap_content"
            android:text=" "
            android:id="@+id/mLeft" />

        <Button
            android:layout_width="120px"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/startBtn"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="10sp"
            android:layout_height="wrap_content"
            android:text=" "
            android:id="@+id/mRight" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <Button
            android:layout_width="120px"
            android:layout_height="wrap_content"
            android:text="@string/reinitialize"
            android:id="@+id/reinitBtn"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/transparent" />

        <Button
            android:layout_width="120px"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/quitBtn"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_weight="1">

        <CheckBox
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/countDown"
            android:id="@+id/checkBoxCountDown"
            android:checked="true"
            android:layout_weight="1"
            android:buttonTint="@android:color/black"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:text="@string/fractions"
            android:id="@+id/checkBoxFractions"
            android:textColor="@android:color/black"
            android:checked="true"
            android:buttonTint="@android:color/black"
            android:layout_weight="1" />
    </LinearLayout>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerWeek"
        android:backgroundTint="@android:color/transparent"
        android:layout_weight="1"
        android:gravity="center_vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_weight="500"
        android:gravity="top">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listCount">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00:00&apos;00&apos;&apos;00"
            android:id="@+id/invertedCount"
            android:gravity="center"
            android:textSize="45sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:rotation="180"/>
    </LinearLayout>

</LinearLayout>